--- a/src/cmake_snake_desktop/CMakeLists.txt
+++ b/src/cmake_snake_desktop/CMakeLists.txt
@@ -1,56 +1,55 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(snake VERSION 0.1 LANGUAGES CXX)
+project(snake_desktop VERSION 2.0 LANGUAGES CXX)
+
+set(CMAKE_INCLUDE_CURRENT_DIR YES)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 set(PROJECT_SOURCES
-        main.cpp
-        mainwindow.cpp
-        mainwindow.h
-        game.cpp
-        game.h
-        gamefield.cpp
-        gamefield.h
-        infofield.cpp
-        infofield.h
-        types.h
+        ../brick_game/snake/snake.cpp
+        ../brick_game/snake/snake.h
+        ../controller/controller.cpp
+        ../controller/controller.h
+        ../gui/desktop/mainwindow.cpp
+        ../gui/desktop/mainwindow.h
+        ../main_qt.cpp
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(snake
+    qt_add_executable(snake_desktop
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET snake APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET snake_desktop APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(snake SHARED
+        add_library(snake_desktop SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(snake
+        add_executable(snake_desktop
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(snake PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(snake_desktop PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-set_target_properties(snake PROPERTIES
+set_target_properties(snake_desktop PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -58,12 +57,13 @@ set_target_properties(snake PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-install(TARGETS snake
-    BUNDLE DESTINATION .
+install(TARGETS snake_desktop
+    BUNDLE DESTINATION tmp/bundle/
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(snake)
+    qt_finalize_executable(snake_desktop)
+
 endif()
